--- a/main.css
+++ b/main.css
@@ -285,6 +285,7 @@ body {
 .skills_title {
     max-width: 700px;
     margin: 0px auto 45px;
+    margin-top: 20px;
     text-align: center;
 }
 .skills_title h1 {
