--- a/main.css
+++ b/main.css
@@ -441,3 +441,32 @@ body {
         flex-basis: 100%;
     }
 }
+#HW4 {
+    min-height: 20vh;
+    background-color: var(--babyblue);
+}
+#HW4 h1 {
+    text-align: center;
+}
+.navbar_2 {
+    padding: 40px 40px 40px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 30px;
+    height: 70px;
+}
+.navbar_2 ul {
+    list-style: none;
+}
+.navbar_2 ul li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+.navbar_2 ul li a {
+    position: relative;
+    display: block;
+    text-decoration: none;
+    color: var(--peach);
+    font-size: 20px;
+}
